--- a/src/index.css
+++ b/src/index.css
@@ -125,6 +125,10 @@ code {
   text-transform: uppercase;
 }
 
+.loader {
+  background-color: red;
+}
+
 @media (max-width: 768px) {
   .list-container {
     grid-template-columns: repeat(2, 1fr);
