--- a/src/index.css
+++ b/src/index.css
@@ -57,11 +57,18 @@ code {
 .list-container {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
-  gap: 10px;
+  gap: 20px;
+  margin: 0 15px;
 }
 
 .show-list {
   margin: 0 auto;
+  border: 1px solid #161616;
+  padding: 8px;
+  background: #fff;
+  line-height: 1.3;
+  text-align: center;
+  box-shadow: 1px 2px 2px gray;
 }
 
 .high-rating {
@@ -82,8 +89,10 @@ code {
   justify-content: space-evenly;
   align-items: center;
   margin-top: 10px;
-  width: 70%;
+  width: 50%;
   margin: 10px auto;
+  background: #fff;
+  box-shadow: 1px 2px 2px gray;
 }
 
 .box {
@@ -116,17 +125,23 @@ code {
 
 .search-container select {
   padding: 5px;
+  cursor: pointer;
 }
 
 .desc {
-  color: black;
+  color: rgb(33, 43, 36);
   font-size: 12px;
   display: block;
   text-transform: uppercase;
 }
 
-.loader {
-  background-color: red;
+.season-episode {
+  color: rgba(34, 24, 21, 0.904);
+}
+
+.main-container {
+  background: rgb(252, 247, 242);
+  padding-top: 10px;
 }
 
 @media (max-width: 768px) {
