--- a/src/index.css
+++ b/src/index.css
@@ -40,7 +40,7 @@ code {
 
 @keyframes animate {
   35% {
-    content: 'Beats';
+    content: 'Beets';
   }
 
   75% {
@@ -170,7 +170,7 @@ code {
   }
   .animation-span::before {
     animation: none;
-    content: 'bears, beats, battlestar galactica';
+    content: 'bears, beets, battlestar galactica';
     font-size: 12px;
   }
 }
